Fixed broken link to project obs, broken truncate_with_more.

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -963,3 +963,4 @@ form.inline .label {
   left: 0 !important;
   z-index: 1000 !important;
 }
+.nobr { white-space: nowrap; }
